--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -103,71 +103,73 @@
     "def build_lenet():\n",
     "    model = models.Sequential([\n",
     "        layers.Conv2D(6, kernel_size=(5, 5), activation='relu', input_shape=(32, 32, 1)),\n",
-    "        layers.AveragePooling2D(pool_size=(2, 2)),  # Added pool_size\n",
+    "        layers.AveragePooling2D(pool_size=(2, 2)),\n",
     "        layers.Conv2D(16, kernel_size=(5, 5), activation='relu'),\n",
-    "        layers.AveragePooling2D(pool_size=(2, 2)),  # Added pool_size\n",
+    "        layers.AveragePooling2D(pool_size=(2, 2)),  \n",
     "        layers.Flatten(),\n",
     "        layers.Dense(120, activation='relu'),\n",
     "        layers.Dense(84, activation='relu'),\n",
-    "        layers.Dense(2, activation='softmax')  # 2 classes (open or closed)\n",
+    "        layers.Dense(2, activation='softmax')  \n",
     "    ])\n",
     "    \n",
     "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "# Build the model\n",
+    "\n",
     "model = build_lenet()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 9ms/step - accuracy: 0.6831 - loss: 0.6090 - val_accuracy: 0.8591 - val_loss: 0.3718\n",
-      "Epoch 2/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.8850 - loss: 0.3308 - val_accuracy: 0.8625 - val_loss: 0.3629\n",
-      "Epoch 3/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.8990 - loss: 0.2618 - val_accuracy: 0.9210 - val_loss: 0.2862\n",
-      "Epoch 4/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9327 - loss: 0.2081 - val_accuracy: 0.9244 - val_loss: 0.2371\n",
-      "Epoch 5/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9327 - loss: 0.1764 - val_accuracy: 0.9381 - val_loss: 0.2204\n",
-      "Epoch 6/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9555 - loss: 0.1371 - val_accuracy: 0.9450 - val_loss: 0.1759\n",
-      "Epoch 7/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9649 - loss: 0.0997 - val_accuracy: 0.9450 - val_loss: 0.1620\n",
-      "Epoch 8/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9672 - loss: 0.0897 - val_accuracy: 0.9485 - val_loss: 0.1477\n",
-      "Epoch 9/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9687 - loss: 0.0739 - val_accuracy: 0.9588 - val_loss: 0.1404\n",
-      "Epoch 10/10\n",
-      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.9835 - loss: 0.0486 - val_accuracy: 0.9588 - val_loss: 0.1351\n"
+      "Epoch 1/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - accuracy: 0.9723 - loss: 0.0510 - val_accuracy: 0.9656 - val_loss: 0.1215\n",
+      "Epoch 2/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - accuracy: 0.9908 - loss: 0.0438 - val_accuracy: 0.9588 - val_loss: 0.1322\n",
+      "Epoch 3/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.9912 - loss: 0.0317 - val_accuracy: 0.9691 - val_loss: 0.1110\n",
+      "Epoch 4/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.9836 - loss: 0.0464 - val_accuracy: 0.9519 - val_loss: 0.1766\n",
+      "Epoch 5/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.9793 - loss: 0.0394 - val_accuracy: 0.9588 - val_loss: 0.1297\n",
+      "Epoch 6/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - accuracy: 0.9917 - loss: 0.0228 - val_accuracy: 0.9588 - val_loss: 0.1437\n",
+      "Epoch 7/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9928 - loss: 0.0172 - val_accuracy: 0.9759 - val_loss: 0.1612\n",
+      "Epoch 8/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9918 - loss: 0.0202 - val_accuracy: 0.9656 - val_loss: 0.1457\n",
+      "Epoch 9/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9947 - loss: 0.0177 - val_accuracy: 0.9622 - val_loss: 0.1394\n",
+      "Epoch 10/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9956 - loss: 0.0139 - val_accuracy: 0.9725 - val_loss: 0.1568\n",
+      "Epoch 11/11\n",
+      "\u001b[1m37/37\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.9983 - loss: 0.0107 - val_accuracy: 0.9519 - val_loss: 0.1678\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x22ae80d0050>"
+       "<keras.src.callbacks.history.History at 0x157001b9ed0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))"
+    "model.fit(X_train, y_train, epochs=11, batch_size=32, validation_data=(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -184,15 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m21/21\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.9959 - loss: 0.0165 \n",
-      "Test Accuracy: 0.9907\n"
+      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - accuracy: 0.9568 - loss: 0.1842 \n",
+      "Test Accuracy: 0.9519\n"
      ]
     }
    ],
